--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,19 @@ on:
       - main
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
       - name: Setup FluentCI
         uses: fluentci-io/setup-fluentci@v5
+        with:
+          wasm: true
+          plugin: postgres
+          args: start
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          POSTGRES_USER: postgres
+          POSTGRES_DB: demo_rails_test
       - name: check style + security
         run: |
           fluentci run --wasm ruby bundle_exec rubocop
@@ -26,3 +32,4 @@ jobs:
           fluentci run --wasm ruby bundle_exec rspec spec
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RAILS_ENV: test
